 o Imperative concreate (di)graph: fix bug of functions add_edge* of imperative
   concrete (di)graphs which appear when the added edge [e] was already in the
   graph [g] and one of the vertices of [e] is equal to another vertex of [g]
   (when using the user-defined equality [G.V.equal]), but not physically equal
   to it. This bug only occurs with OCaml version >= 4.0.
 o functions in modules Components, Dominator, Flow, Topological and Traverse
   now create smaller auxiliary hash tables
 o Graphviz: add the attribute `HtmlLabel to specify html strings.

version 1.8.5, March 4, 2014
-----------------------------
 o Graphviz: reverted to the old API where edges and vertices are
   given a single style attribute; but such attributes are collected
   and output in the DOT file into a list (thus allowing multiple style
   attributes)
 o fixed issue in ./configure with ocamlfind on Win32.
 o fixed compilation when laglgnomecanvas is missing (bug introduced in 1.8.4).
 o fixed more issues with 'make -j'.

version 1.8.4, February 4, 2014
-------------------------------
 o fixed [Graphml] printer (contributed by Johannes Schauer)
 o Components: the components of [scc_list] are provided in the same order than
 the ones of [scc_array].
 o fix compilation with 'make -j'
 o Graphviz: handle attribute penwidth on edges and vertices
 o also install graph.o and graph.cmxs
 o fixed installation with ocamlfind (thanks to Virgile Prevosto)
 o new functions [gnp] and [gnp_labeled] in module [Rand] to generate random
   graphs using the G(n,p) model (contributed by Thomas Aubry)
 o Prim's algorithm (in module [Prim]; not exported in [Pack])
   (contributed by Thomas Aubry)
 o Graphviz: support for nested subgraphs. (Backward-incompatible change:
   add 'sg_parent = None' to obtain subgraphs whose parents are the main graph)
 o Graphviz: edges and vertices can now receive multiple styles.
   (Backward-incompatible change: constructors `Style now require a list as
   argument)